Bug 504727 - Crash when desktop Overview effect is active and display outputs configuration changes
Summary: Crash when desktop Overview effect is active and display outputs configuratio...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: generic-crash (other bugs)
Version First Reported In: 6.4.80
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2025-05-24 10:49 UTC by Jure Repinc
Modified: 2025-05-28 02:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.15
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (75.73 KB, text/plain)
2025-05-24 10:49 UTC, Jure Repinc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jure Repinc 2025-05-24 10:49:26 UTC
Application: kwin_wayland (6.4.80)

ApplicationNotResponding [ANR]: false
Qt Version: 6.9.0
Frameworks Version: 6.15.0
Operating System: Linux 6.14.6-1-default x86_64
Windowing System: Wayland
Distribution: "openSUSE Tumbleweed"
DrKonqi: 6.4.80 [CoredumpBackend]

-- Information about the crash:
I have Overview effect set to activate when I move the mouse into upper-left corner of screen. I have two displays: main primary  larger one on the right and smaller one on the left. When I chnage the display outputs configuration, e.g. turn off display, KWin crashes.

Steps to reproduce:
1. Activate Overview effect in multi-screen configuration
2. Turn on/off one of the displays while the effect is active

Actual result:
KWin crashes

Expected result:
KWin shoould not crash

The crash can be reproduced every time.

-- Backtrace (Reduced):
#5  0x00007f8686c720af in ShaderNode::preprocessTexture (this=0x55b225917210, info=...) at /usr/src/debug/kirigami-6.15.0git.20250519T222610~fa73f2a/src/primitives/scenegraph/shadernode.cpp:267
#6  0x00007f8686c721d2 in ShaderNode::preprocess (this=0x55b225917210) at /usr/src/debug/kirigami-6.15.0git.20250519T222610~fa73f2a/src/primitives/scenegraph/shadernode.cpp:49
#7  0x00007f86ed961cba in QSGRenderer::preprocess (this=0x55b225dbd130) at /usr/src/debug/qtdeclarative-everywhere-src-6.9.0/src/quick/scenegraph/coreapi/qsgrenderer.cpp:239
#8  0x00007f86ed9617b7 in QSGRenderer::renderScene (this=0x55b225dbd130) at /usr/src/debug/qtdeclarative-everywhere-src-6.9.0/src/quick/scenegraph/coreapi/qsgrenderer.cpp:142
#9  QSGRenderer::renderScene (this=0x55b225dbd130) at /usr/src/debug/qtdeclarative-everywhere-src-6.9.0/src/quick/scenegraph/coreapi/qsgrenderer.cpp:120
#10 0x00007f86ed90a6e7 in QQuickWindowPrivate::renderSceneGraph (this=0x55b226085ab0) at /usr/src/debug/qtdeclarative-everywhere-src-6.9.0/src/quick/items/qquickwindow.cpp:690
#11 0x00007f86ee0fbeca in KWin::OffscreenQuickView::update (this=0x55b223c190a0) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/offscreenquickview.cpp:258
#12 KWin::OffscreenQuickView::update (this=0x55b223c190a0) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/offscreenquickview.cpp:208
#13 0x00007f86ee0fe59c in KWin::QuickSceneEffect::paintScreen (this=<optimized out>, renderTarget=..., viewport=..., mask=<optimized out>, region=<optimized out>, screen=<optimized out>) at /usr/include/c++/14/bits/unique_ptr.h:193
#14 0x00007f86ee0d90a6 in KWin::EffectsHandler::paintScreen (this=0x55b2239f2750, renderTarget=<optimized out>, viewport=<optimized out>, mask=<optimized out>, region=<optimized out>, screen=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/effecthandler.cpp:362
#15 0x00007f86ee0d90a6 in KWin::EffectsHandler::paintScreen (this=0x55b2239f2750, renderTarget=<optimized out>, viewport=<optimized out>, mask=<optimized out>, region=<optimized out>, screen=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/effecthandler.cpp:362
#16 0x00007f86ee0d90a6 in KWin::EffectsHandler::paintScreen (this=0x55b2239f2750, renderTarget=<optimized out>, viewport=<optimized out>, mask=<optimized out>, region=<optimized out>, screen=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/effecthandler.cpp:362
#17 0x00007f86ee0d90a6 in KWin::EffectsHandler::paintScreen (this=0x55b2239f2750, renderTarget=<optimized out>, viewport=<optimized out>, mask=<optimized out>, region=<optimized out>, screen=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/effecthandler.cpp:362
#18 0x00007f86ee0d90a6 in KWin::EffectsHandler::paintScreen (this=0x55b2239f2750, renderTarget=<optimized out>, viewport=<optimized out>, mask=<optimized out>, region=<optimized out>, screen=<optimized out>) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/effect/effecthandler.cpp:362
#19 0x00007f86ee1e2988 in KWin::WorkspaceScene::paint (this=0x55b223b938d0, renderTarget=..., region=...) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/scene/workspacescene.cpp:406
#20 0x00007f86ee1cdc3e in KWin::SceneDelegate::paint (this=<optimized out>, renderTarget=..., region=...) at /usr/src/debug/kwin-6.3.80git.20250522T181708~42aa42af/src/scene/scene.cpp:44


Reported using DrKonqi
Comment 1 Jure Repinc 2025-05-24 10:49:27 UTC
Created attachment 181701 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2025-05-27 08:34:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1816
Comment 3 Vlad Zahorodnii 2025-05-27 08:56:52 UTC
Git commit 41ff1946884e68205de2132e8ea41b52eb17d66c by Vlad Zahorodnii.
Committed on 27/05/2025 at 08:53.
Pushed by vladz into branch 'master'.

Add null texture guard in ShadowedTextureNode::preprocess()

M  +1    -1    src/primitives/scenegraph/shadernode.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/41ff1946884e68205de2132e8ea41b52eb17d66c