Add null texture guard in ShadowedTextureNode::preprocess()

BUG: 504727